- Fixed bug #32613 (ext/snmp: use of snmp_shutdown() causes snmpapp.conf   access errors). (Jani, ric at arizona dot edu)